添加了电子白板和护士视图的同步

--- a/templates/infusion_system_mz.html
+++ b/templates/infusion_system_mz.html
@@ -5,9 +5,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Outpatient large screen of infusion system</title>
-    <link rel="stylesheet" href="{% static 'css/infusion_system_large_screen_header.css' %}">
-    <link rel="stylesheet" href="{% static 'css/infusion_system_large_screen_content.css' %}">
-    <link rel="stylesheet" href="{% static 'css/infusion_system_large_screen_footer.css' %}">
+    <link rel="stylesheet" href="{% static 'css/infusion_system_mz_header.css' %}">
+    <link rel="stylesheet" href="{% static 'css/infusion_system_mz_content.css' %}">
+    <link rel="stylesheet" href="{% static 'css/infusion_system_mz_footer.css' %}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -123,6 +123,6 @@
         <img src="{% static 'images/logo.png' %}" alt="Logo" class="logo">
     </div>
 
-    <script src="{% static 'js/infusion_system_large_screen.js' %}"></script>
+    <script src="{% static 'js/infusion_system_mz.js' %}"></script>
 </body>
 </html>
