--- a/templates/infusion_system_zy.html
+++ b/templates/infusion_system_zy.html
@@ -5,8 +5,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>智能输液监测系统</title>
-    <link rel="stylesheet" href="{% static 'css/infusion_system_large_screen_zy.css' %}">
+    <title>护士输液监控</title>
+    <link rel="stylesheet" href="{% static 'css/infusion_system_zy.css' %}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -127,7 +127,7 @@
         <img src="{% static 'images/logo.png' %}" alt="Logo" class="logo">
     </div>
 
-    <script src="{% static 'js/infusion_system_large_screen_zy.js' %}"></script>
+    <script src="{% static 'js/infusion_system_zy.js' %}"></script>
 </body>
 
 </html>
